--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ img,fieldset,abbr,acronym{border:0;}
 article,aside,figure,figcaption,hgroup,footer,header,nav,section,video,object{display:block;}
 audio,canvas,progress,video {display: inline-block;vertical-align: baseline;}
 
-img 			{border:0;max-width:100%;vertical-align:middle;}
+img 			{border:0;max-width:100%;vertical-align:middle; height: 60px;}
 figure		{position:relative;}
 figure img 	{display:block;}
 
@@ -133,9 +133,9 @@ h6 {font-size:17px;text-transform:uppercase;padding:0 0 23px;}
 .circle .icon {color:#34394A;}
 
 /* 08 HEADER */
-.header 				{float:left;width:100%;background:#fff;height:80px;}
+.header 				{float:left;width:100%;background:#fff;height:80px; padding: 2px;}
 .header > .wrap		{display:table;height:80px;}
-.logo					{display:table-cell;vertical-align:middle;padding:5px 0;}
+.logo					{display:table-cell;vertical-align:middle;padding:8px 0;}
 .main-nav 						{float:right;font-size:14px;text-transform:uppercase;position:relative;}
 .main-nav ul > li					{float:left;display:block;padding:30px 0 30px 30px;position:static;}
 .main-nav ul > li > a 				{color:#858585;border-radius:0;position:relative;}
