--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ h6 {font-size:17px;text-transform:uppercase;padding:0 0 23px;}
 .circle .icon {color:#34394A;}
 
 /* 08 HEADER */
-.header 				{float:left;width:100%;background:#fff;height:80px; padding: 2px;}
+.header 				{float:left;width:100%;background:#fff;height:80px; }
 .header > .wrap		{display:table;height:80px;}
 .logo					{display:table-cell;vertical-align:middle;padding:8px 0;}
 .main-nav 						{float:right;font-size:14px;text-transform:uppercase;position:relative;}
@@ -878,7 +878,7 @@ div.radio input 						{opacity: 0;filter: alpha(opacity=0);-moz-opacity: 0;borde
 @media screen and (max-width: 1040px) {
 .header			{height:auto;min-height:80px;}
 .header .wrap	{height:auto;}
-.logo			{float:left;width:100%;display:block;padding:15px 0;}
+.logo			{float:left;width:100%;display:block;padding:10px 0;}
 .main-nav 		{float:left;width:100%;border-top:1px solid #dfdfd0;padding:15px 0;}
 .main-nav ul > li 	{padding:0 25px 0 0;}
 
