--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,15 @@ article,aside,figure,figcaption,hgroup,footer,header,nav,section,video,object{di
 audio,canvas,progress,video {display: inline-block;vertical-align: baseline;}
 
 img 			{border:0;max-width:100%;vertical-align:middle; }
-.imglogo {border:0;max-width:100%;vertical-align:middle; height: 60px;
+.imglogo {border:0;max-width:100%;vertical-align:middle; height: 60px;}
+ .alb{     float: left;
+	min-width: 100%;
+	max-width: 100%;
+	height: 420px;
+     object-fit: cover;
+	margin-bottom: 30px;
 
-}
+ }
 figure		{position:relative;}
 figure img 	{display:block;}
 
@@ -194,7 +200,11 @@ h6 {font-size:17px;text-transform:uppercase;padding:0 0 23px;}
 .partners 	{float:left;width:100%;padding:48px 0 30px;}
 .partners h2	{text-transform:uppercase;font-size:30px;padding:0 0 40px;}
 
-.testimonials 			{float:left;width:100%;background:url(../images/testimonials.png) 50% 100% no-repeat;overflow:hidden;color:#fff;padding:90px 0 70px;}
+.testimonials 			{float:left;width:100%;background:url(../images/uploads/6.png) no-repeat center center fixed;overflow:hidden;color:#fff;padding:90px 0 70px; background-blend-mode: lighten;
+    background-size: cover;
+}
+
+
 .testimonials h6			{text-transform:uppercase;position:relative;font-size:39px;color:#fff;}
 .testimonials h6:before	{content:"";width:41px;height:29px;}
 .testimonials p 			{padding:0 20% 30px;font-size:16px;font-weight:500;color:#fff;}
@@ -895,6 +905,16 @@ div.radio input 						{opacity: 0;filter: alpha(opacity=0);-moz-opacity: 0;borde
 .result .one-half					{float:right;width:50%;margin-top:180px; height:auto !important;position:relative;-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;}
 .result .one-half h3					{position:absolute;top:-180px;}
 
+.alb{     float: left;
+	min-width: 100%;
+	max-width: 100%;
+	height: 420px;
+	object-fit: cover;
+	margin-bottom: 30px;
+ }
+
+
+
 .result .price, .result .meta 		{float:left;}
 .result .meta 						{padding:19px 10px 0;}
 .result .btn 						{margin-top:0;position:absolute;top:-20px;left:-92.5%;width:86%;}
@@ -1004,7 +1024,12 @@ div.radio input 						{opacity: 0;filter: alpha(opacity=0);-moz-opacity: 0;borde
 .intro .textwidget 				{padding-top:40%;}
 
 .gmap {height:200px;}
+.alb{     float: left;
+	min-width: 100%;
+    height: 780px; object-fit: cover;
+	margin-bottom: 30px;
 
+ }
 .preloader	{display:none;}
 }
 
