--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ h6 {font-size:17px;text-transform:uppercase;padding:0 0 23px;}
 .partners 	{float:left;width:100%;padding:48px 0 30px;}
 .partners h2	{text-transform:uppercase;font-size:30px;padding:0 0 40px;}
 
-.testimonials 			{float:left;width:100%;background:url(../images/uploads/6.png) no-repeat center center fixed;overflow:hidden;color:#fff;padding:90px 0 70px; background-blend-mode: lighten;
+.testimonials 			{float:left;width:100%;background:url(../images/uploads/7.jpeg) no-repeat center center fixed;overflow:hidden;color:#fff;padding:90px 0 70px; background-blend-mode: lighten;
     background-size: cover;
 }
 
@@ -1026,7 +1026,7 @@ div.radio input 						{opacity: 0;filter: alpha(opacity=0);-moz-opacity: 0;borde
 .gmap {height:200px;}
 .alb{     float: left;
 	min-width: 100%;
-    height: 780px; object-fit: cover;
+    height:350px; object-fit: cover;
 	margin-bottom: 30px;
 
  }
