--- a/css/style-rtl.css
+++ b/css/style-rtl.css
@@ -169,8 +169,8 @@ h6 {font-size:17px;text-transform:uppercase;padding:0 0 23px;}
 .home .main 				{padding:0;}
 .home .advanced-search 	{margin:0;}
 
-.intro 					{background:url(../images/uploads/keyvisual.jpg) 50% 0 fixed no-repeat;height:100vh;overflow:hidden;float:right;width:100%;display:block;min-height:768px;}
-.intro .textwidget		{color:#fff;padding-top:24%;text-align:center;}
+.intro 					{background:url(../images/uploads/keyvisual.jpg) 50% 0 fixed no-repeat;height:100vh;overflow:hidden;float:right;display:block;min-height:100%; min-width:100%;background-size:  cover; opacity: 0.4;}
+.intro .textwidget		{color:#fff;padding-top:19%;text-align:center;}
 .intro .textwidget h1 	{text-transform:uppercase;font-size:61px;margin:0 0 -5px;}
 .intro .textwidget h2 	{text-transform:uppercase;font-size:23px;margin:0;}
 .intro .actions			{margin:6px 0 0;padding:46px 0 0;background:url(../images/separator.jpg) 50% 0 no-repeat;border:none;-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;}
@@ -1018,7 +1018,7 @@ div.radio input 						{opacity: 0;filter: alpha(opacity=0);-moz-opacity: 0;borde
 }
 
 @media screen and (max-width: 500px) {
-.intro .textwidget 	{padding-top:50%;}
+.intro .textwidget 	{padding-top:40%;}
 .intro .textwidget h1 {font-size:45px;}
 .intro .textwidget h2 {font-size:17px;}
 .intro .btn.large	{font-size:14px;width:46%;margin:0 1%;}
