--- a/css/style-rtl.css
+++ b/css/style-rtl.css
@@ -190,8 +190,9 @@ h6 {font-size:17px;text-transform:uppercase;padding:0 0 23px;}
 .partners h2	{text-transform:uppercase;font-size:30px;padding:0 0 40px;}
 
 .testimonials 			{float:right;width:100%;background:url(../images/uploads/My_taxi_photo.png) ;
-	min-width: 100%;
-    height:350px; object-fit: cover;
+	width: 100%;
+	height: 100%;
+     object-fit: cover;
 	margin-bottom: 30px; background-size: cover;}
 .testimonials h6			{text-transform:uppercase;position:relative;font-size:39px;color:#fff;}
 .testimonials h6:before	{content:"";width:41px;height:29px;left:auto !important;right:-16px !important;}
